# yafowil.widget.datetime

./: .gitignore  CHANGES.rst  HISTORY.rst  Makefile  README.rst  TODO.rst  base.cfg  buildout.cfg  i18n.sh  karma.conf.js  mx.ini  mxmake.yaml  package.json  pyproject.toml  rollup.conf.js  setup.cfg  setup.py
.github/workflows/: test_js.yaml  test_py.yaml
etc/: base.cfg
js/: karma-coverage.js  karma.conf.js  rollup.conf.js  wtr.config.mjs
js/src/: bundle.js  datepicker.js  datetime.js  i18n.js  settings.js  timepicker.js  widget.js
js/src/bootstrap5/: bundle.js  datepicker.js  timepicker.js
js/src/default/: datepicker.js  timepicker.js
js/src/locales/: base_locales.js  de.js  us.js
js/tests/: test_datepicker.js  test_i18n.js  test_settings.js  test_timepicker.js
scripts/: coverage.sh  i18n.sh  install.sh  styles.sh  test.sh
scss/: datepicker.scss  timepicker.scss
scss/bootstrap5/: datepicker.scss  timepicker.scss
scss/default/: timepicker.scss
src/yafowil/widget/datetime/: __init__.py  configure.zcml  example.py  tests.py  widget.py  widget.rst  widget.txt  yafowil.widget.datetime.js  yafowil.widget.datetime.js.map  yafowil.widget.datetime.min.js  yafowil.widget.datetime.min.js.map
src/yafowil/widget/datetime/locales/: yafowil.widget.datetime.pot
src/yafowil/widget/datetime/resources/: datepicker-bs4.css  datepicker.css  datepicker.js  datetime.js  datetime.js.map  datetime.min.js  jquery-ui-1.8.1.custom.css  jquery-ui-1.8.1.custom.txt  jquery-ui-1.8.16.datepicker.bootstrap.css  jquery-ui-1.8.18.datepicker.min.js  jquery.ui.timepicker.css  (+12 more)
(+14 files in other folders)
